# dobby

./: ARCHITECTURE_V2.md  ARCHITECTURE_V3_ANDROID_RUNTIME.md  CLEAN_BUILD_NOTES.md  CMakeLists.txt  PATCH_NOTES.md  PATCH_NOTES_ANDROID_API.md  PATCH_NOTES_RUNTIME_AUTOHOOK.md  PATCH_NOTES_XDL_AUTOHOOK_HEADER.md  README.md  docs-runtime-architecture.md
.github/workflows/: Builder.yaml
builtin-plugin/: CMakeLists.txt
builtin-plugin/SymbolResolver/: CMakeLists.txt  dobby_hook_symbol.cc  dobby_symbol_resolver.h
builtin-plugin/SymbolResolver/elf/: dobby_symbol_resolver.cc  dobby_xdl_symbol_resolver.cc  dobby_xdl_symbol_resolver.h
cmake/: build_environment_check.cmake  compiler_and_linker.cmake
common/: os_arch_features.h  pac_kit.h
docs/: android-xdl.md  android_hook_api.md  auto_hook_runtime.md  compile.md
examples/: android_symbol_hook_example.c  socket_example.cc
include/: dobby.h
scripts/: build_android.sh  build_linux.sh  platform_builder.py
source/: Interceptor.h  dobby.cpp  dobby_android_api.cpp
source/stealth/: CMakeLists.txt  anti_cheat_sdk.cpp  anti_cheat_sdk.h  anti_debug.cpp  anti_debug.h  anti_frida.cpp  anti_frida.h  anti_substrate.cpp  anti_substrate.h  hide_maps.cpp  hide_maps.h  hide_module.cpp  hide_module.h  hook_context.cpp  hook_context.h  inline_patch_bypass.cpp  inline_patch_bypass.h  integrity_bypass.cpp  integrity_bypass.h  module_scan_bypass.cpp  module_scan_bypass.h  short_function_hook.cpp  short_function_hook.h  stealth_api.cpp  stealth_trampoline.cpp  stealth_trampoline.h
substrate_compatible/: cydia_substrate.cpp
(+48 files in other folders)
